# ModuleRefinement

./: .gitignore  GO_score.py  ModuleLBG.py  README.md  center_algorithms.py  detect_svm_modules.py  detect_wgcna_modules.py  eigengene_explained_variance.py  load_data.py  new_wgcna_go_score.csv  pyproject.toml  refined_clustering.py  refined_modules.py  remove_bads.py  requirements.txt  run_eigengene_evr.slurm  run_go_modules.slurm  run_refined_modules.slurm  run_test_modules.slurm  run_wgcna_modules.slurm  scratch.ipynb  slurm.err  slurm.out  test_modules.py  test_modules_Z75.py  top_go_terms.py  utils.py
ModuleRefinement/: LICENSE.md  ModuleLBG.py  __init__.py  center_algorithms.py  setup.py  utils.py
ModuleRefinement.egg-info/: PKG-INFO  SOURCES.txt
data/: ebola_Liver_labels.csv  ebola_Spleen_labels.csv  gse73072_hrv_48_64_labels.csv  gse73072_hrv_48_64_labels_bad.csv  salmonella_Liver_labels.csv
examples/: small_example.ipynb  using_modulelbg.ipynb
experiments/: slurm.err  utils.py
experiments/compute_modules/: detect_wgcna_modules.py  refined_modules.py
experiments/evaluate_modules/: GO_sanity.py  GO_score.py  go_refined_modules.py  (+5 more)
old/: GO_score.csv  ModuleLBG.py  center_algorithms.py  graph_tools_construction.py  refined_clustering copy.py  remove_bads.py  run_test_all_modules.slurm  run_test_modules2.slurm  salmonella_Spleen_labels.csv  sanity.csv  slurm1.out  svm_score.csv  svm_score_all.csv  test_modules_sanity.py
process_results/: Best_Modules.ipynb  refine_go_results.py  top_go_terms.py
trash/: test_all_modules.py  test_module_lbg.py
(+310 files in other folders)
